# sn-edt2ics

./: .gitignore  LICENSE  README.md  edt2ics.py  pyproject.toml  requirements.txt
